# GNN-System

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/data/: excel_ingestion.py  excel_spec.py  feature_engineering.py  graph_cache_sqlite.py  pyg_converter.py  pyg_converter_hetero.py
backend/app/models/: _lr.py  factory.py  gat.py  gcn.py  gin.py  hetero_wrapper.py  loss.py  mlp.py  sage.py
backend/app/routers/: projects.py
backend/app/schemas/: api_models.py
backend/app/training/: callbacks.py  optuna_search.py  pipeline.py  target_scaler.py
backend/demo_data/: demo_hetero_multifeature.v3.xlsx  demo_multigraph_hetero.v2.xlsx  demo_multigraph_homo.v2.xlsx  demo_multigraph_homo.xlsx  demo_multigraph_homo_large.v2.xlsx  demo_multigraph_homo_no_type.xlsx  demo_multigraph_multi_y.xlsx
backend/scripts/: generate_excel_demos.py
backend/tests/: test_converter_hetero.py  test_demo_data.py  test_demo_hetero_str_gid.py  test_demo_training_smoke.py  test_excel_ingestion.py  test_excel_router.py  test_explore_hetero.py  test_graph_cache.py  test_lr_scheduler.py  test_multi_y_models.py  test_pipeline_metrics.py  test_pipeline_multi_y.py  test_pyg_converter_multi_y.py  test_target_scaler.py
docs/architecture/: overview.md
docs/changelog/: 2026-04-25-5-adjustments.md  2026-04-25-graphx-frontend-v2.md  2026-04-27-autopilot-cleanup.md  2026-05-12-multi-y-training.md  2026-05-13-optional-type-column.md
docs/technical/: 2026-04-25-5-adjustments.md  2026-04-27-autopilot-cleanup.md  graphx-frontend-v2.md  (+2 more)
(+22 files in other folders)
