[project]
name = "graphx-backend"
version = "0.2.0"
description = "GraphX.AI — GNN backend for graph intelligence and automated training"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "networkx>=3.3",
    "torch>=2.3.0",
    "torch-geometric>=2.5.0",
    "pytorch-lightning>=2.3.0",
    "optuna>=3.6.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

# Explicit CUDA 12 PyTorch index for GPU builds
[[tool.uv.index]]
name = "pytorch-cu12"
url = "https://download.pytorch.org/whl/cu124"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint.per-file-ignores]
# Test modules call pytest.importorskip("torch") before importing the app code
# it guards, so the app imports legitimately sit below a statement (E402). This
# is the intended pattern for tests that skip cleanly without torch/PyG.
"tests/*" = ["E402"]
